style main window

--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 body {
   overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+
   margin: 0;
+  padding-top: 30px;
+
+  background-color: black;
+}
+
+canvas {
+  width: 800px;
+  height: 600px;
+  background-color: #fff;
 }
